[project]
name = "notq"
version = "0.0.1"
description = "Atushka/Yachan/LiveJournal/Reddit hybrid."
dependencies = [
    "flask",
    "markdown",
    "html-sanitizer",
    "cachetools",
    "Pygments",
    "SQLAlchemy",
    "psycopg2",
    "python-telegram-bot"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
